fix spacing between button and divider

--- a/static/scss/site.scss
+++ b/static/scss/site.scss
@@ -86,7 +86,10 @@ body {
     display: flex;
     justify-content: space-between; 
   }
-  padding: 1rem 1rem 2rem;
+  padding: 1rem;
+  @media screen and (min-width: 32rem) {
+    padding: 1rem 1rem 2rem;
+  }
 }
 
 button {
